# Erlang-type-checker

./: LICENSE  Makefile  README
config/: .gitignore  Makefile  configure.in
lib/contracts/: Makefile
lib/contracts/src/: Makefile  checker.erl  checker_utils.erl  contracts.erl
make/: .gitignore  include.mk.in  stderl.mk  subdir.mk.in
